# traffic-analysis

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml  requirements.txt
conf/: logging.yml
src/air_quality_analysis/: __init__.py  __main__.py  settings.py
tests/pipelines/data_science/: test_pipeline.py
traffic-analysis/: README.md  pyproject.toml  requirements.txt
traffic-analysis/src/traffic_analysis/: __init__.py  __main__.py  settings.py
