[tool.poetry]
name = "traffic-analysis"
version = "0.1.0"
description = "Learning-first Kedro project for geospatial air quality analysis"
authors = ["Codex <codex@example.com>"]
readme = "README.md"
packages = [{ include = "traffic_analysis", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
kedro = ">=0.19,<0.20"
kedro-datasets = { version = ">=3.0,<4.0", extras = ["pandas"] }
pandas = ">=2.1,<3.0"
requests = ">=2.31,<3.0"
scikit-learn = ">=1.4,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"

[tool.kedro]
package_name = "traffic_analysis"
project_name = "Geospatial Air Quality Analysis"
kedro_init_version = "0.19.0"
source_dir = "src"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
