[project]
name = "air-quality-analysis"
version = "0.1.0"
description = "ML project for air quality analysis using geospatial data."
authors = [
    {name = "Pol John Cruz",email = "poljohncruz@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kedro (>=1.3.1,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
