[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-analysis"
version = "0.1.0"
description = "ML project for air quality analysis using geospatial data."
authors = [
    {name = "Pol John Cruz",email = "poljohncruz@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=1.3.1",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibdataset]>=3.0",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
    "kedro (>=1.3.1,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[project.scripts]
air-quality-analysis = "air_quality_analysis.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
]

[tool.setuptools.dynamic.version]
attr = "air_quality_analysis.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "air_quality_analysis"
project_name = "air-quality-analysis"
kedro_init_version = "1.3.1"
tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/air_quality_analysis -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201",
]
ignore = [
    "E501",
]
